feat: add shared pagination helper, refactor account tree logic, and enhance envelope rollover tests