@@ -1,30 +1,43 @@
 package com.rslima.ricash.ledgers.exchangerates;
 
-import tools.jackson.databind.JsonNode;
-import tools.jackson.databind.ObjectMapper;
+import com.rslima.ricash.configuration.ExchangeRateProviderProperties;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
+import org.springframework.web.client.RestClientException;
+import tools.jackson.core.JacksonException;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDate;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 /**
  * Service for fetching exchange rates from external APIs.
  * Supports multiple providers with fallback logic.
  */
-@Service
 @RequiredArgsConstructor
 @Slf4j
 public class ExternalExchangeRateService {
 
-    private final RestClient restClient = RestClient.create();
-    private final ObjectMapper objectMapper;
+    private final RestClient restClient;
+    private final ExchangeRateProviderProperties properties;
 
     private static final int RATE_SCALE = 6;
+
+    /** BCB PTAX response: {"value":[{"cotacaoVenda": 5.75, ...}]} */
+    record BcbResponse(List<BcbQuote> value) {
+    }
+
+    record BcbQuote(BigDecimal cotacaoVenda) {
+    }
+
+    /** open.er-api.com response: {"result":"success","rates":{"BRL":5.75,...}} */
+    record ErApiResponse(String result, Map<String, BigDecimal> rates) {
+    }
 
     /**
      * Fetches exchange rate from external APIs.
@@ -42,7 +55,7 @@ public class ExternalExchangeRateService {
         if ("BRL".equals(fromCurrency) || "BRL".equals(toCurrency)) {
             Optional<BigDecimal> bcbRate = fetchFromBCB(fromCurrency, toCurrency, date);
             if (bcbRate.isPresent()) {
-                log.info("Found rate from BCB API: {} {} -> {} = {}",
+                log.info("Found rate from BCB API: {} -> {} = {}",
                     fromCurrency, toCurrency, bcbRate.get());
                 return bcbRate;
             }
@@ -63,76 +76,52 @@ public class ExternalExchangeRateService {
      * Supports USD and EUR to/from BRL.
      */
     private Optional<BigDecimal> fetchFromBCB(String fromCurrency, String toCurrency, LocalDate date) {
+        final String bcbSymbol;
+        final boolean inverse;
+
+        if ("BRL".equals(toCurrency) && ("USD".equals(fromCurrency) || "EUR".equals(fromCurrency))) {
+            bcbSymbol = fromCurrency;
+            inverse = false;
+        } else if ("BRL".equals(fromCurrency) && ("USD".equals(toCurrency) || "EUR".equals(toCurrency))) {
+            bcbSymbol = toCurrency;
+            inverse = true;
+        } else {
+            // BCB only quotes USD and EUR against BRL
+            return Optional.empty();
+        }
+
+        // BCB expects the date as DD-MM-YYYY
+        String dateStr = String.format("%02d-%02d-%d",
+            date.getDayOfMonth(), date.getMonthValue(), date.getYear());
+
+        String url = String.format(
+            "%s/CotacaoMoedaDia(moeda=@moeda,dataCotacao=@dataCotacao)?@moeda='%s'&@dataCotacao='%s'&$format=json",
+            properties.bcbBaseUrl(), bcbSymbol, dateStr);
+
         try {
-            String bcbCurrency = null;
-            boolean inverse = false;
-
-            // Determine which BCB currency code to use
-            if ("BRL".equals(toCurrency) && "USD".equals(fromCurrency)) {
-                bcbCurrency = "1"; // USD/BRL (Dólar Americano)
-            } else if ("BRL".equals(toCurrency) && "EUR".equals(fromCurrency)) {
-                bcbCurrency = "21933"; // EUR/BRL (Euro)
-            } else if ("BRL".equals(fromCurrency) && "USD".equals(toCurrency)) {
-                bcbCurrency = "1";
-                inverse = true;
-            } else if ("BRL".equals(fromCurrency) && "EUR".equals(toCurrency)) {
-                bcbCurrency = "21933";
-                inverse = true;
-            } else {
-                // BCB only supports USD and EUR
-                return Optional.empty();
-            }
-
-            // Format date as DD-MM-YYYY
-            String dateStr = String.format("%02d-%02d-%d",
-                date.getDayOfMonth(), date.getMonthValue(), date.getYear());
-
-            // API URL: https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata/
-            // CotacaoMoedaDia(moeda=@moeda,dataCotacao=@dataCotacao)?@moeda='USD'&@dataCotacao='01-30-2025'
-            String url = String.format(
-                "https://olinda.bcb.gov.br/olinda/servico/PTAX/versao/v1/odata/" +
-                "CotacaoMoedaDia(moeda=@moeda,dataCotacao=@dataCotacao)?" +
-                "@moeda='%s'&@dataCotacao='%s'&$format=json",
-                bcbCurrency.equals("1") ? "USD" : "EUR",
-                dateStr
-            );
-
-            String response = restClient.get()
+            BcbResponse response = restClient.get()
                 .uri(url)
                 .retrieve()
-                .body(String.class);
+                .body(BcbResponse.class);
 
-            if (response == null || response.isEmpty()) {
-                log.debug("Empty response from BCB API");
-                return Optional.empty();
-            }
-
-            // Parse JSON response
-            JsonNode root = objectMapper.readTree(response);
-            JsonNode value = root.path("value");
-
-            if (value.isEmpty()) {
+            if (response == null || response.value() == null || response.value().isEmpty()) {
                 log.debug("No data in BCB API response for date {}", dateStr);
                 return Optional.empty();
             }
 
-            // Get the first (most recent) rate
-            JsonNode firstRate = value.get(0);
-            BigDecimal rate = firstRate.path("cotacaoVenda").decimalValue();
-
+            BigDecimal rate = response.value().getFirst().cotacaoVenda();
             if (rate == null || rate.compareTo(BigDecimal.ZERO) <= 0) {
                 log.debug("Invalid rate from BCB API: {}", rate);
                 return Optional.empty();
             }
 
-            // If we need the inverse rate (BRL -> other currency)
             if (inverse) {
                 rate = BigDecimal.ONE.divide(rate, RATE_SCALE, RoundingMode.HALF_UP);
             }
 
             return Optional.of(rate.setScale(RATE_SCALE, RoundingMode.HALF_UP));
 
-        } catch (Exception e) {
+        } catch (RestClientException | JacksonException e) {
             log.warn("Failed to fetch rate from BCB API: {}", e.getMessage());
             return Optional.empty();
         }
@@ -144,51 +133,28 @@ public class ExternalExchangeRateService {
      * Always returns latest rates (doesn't support historical dates).
      */
     private Optional<BigDecimal> fetchFromExchangeRateAPI(String fromCurrency, String toCurrency) {
-        try {
-            // Using the free endpoint (no API key required)
-            // https://open.er-api.com/v6/latest/USD
-            String url = String.format(
-                "https://open.er-api.com/v6/latest/%s",
-                fromCurrency
-            );
+        String url = String.format("%s/%s", properties.erApiBaseUrl(), fromCurrency);
 
-            String response = restClient.get()
+        try {
+            ErApiResponse response = restClient.get()
                 .uri(url)
                 .retrieve()
-                .body(String.class);
+                .body(ErApiResponse.class);
 
-            if (response == null || response.isEmpty()) {
-                log.debug("Empty response from ExchangeRate-API");
+            if (response == null || !"success".equals(response.result())) {
+                log.warn("ExchangeRate-API returned no success result for {}", fromCurrency);
                 return Optional.empty();
             }
 
-            // Parse JSON response
-            JsonNode root = objectMapper.readTree(response);
-
-            // Check if request was successful
-            String result = root.path("result").asString();
-            if (!"success".equals(result)) {
-                log.warn("ExchangeRate-API returned error: {}", root.path("error-type").asString());
-                return Optional.empty();
-            }
-
-            // Get the rate for target currency
-            JsonNode rates = root.path("rates");
-            if (!rates.has(toCurrency)) {
-                log.debug("Currency {} not found in ExchangeRate-API response", toCurrency);
-                return Optional.empty();
-            }
-
-            BigDecimal rate = rates.path(toCurrency).decimalValue();
-
+            BigDecimal rate = response.rates() != null ? response.rates().get(toCurrency) : null;
             if (rate == null || rate.compareTo(BigDecimal.ZERO) <= 0) {
-                log.debug("Invalid rate from ExchangeRate-API: {}", rate);
+                log.debug("No usable rate for {} in ExchangeRate-API response", toCurrency);
                 return Optional.empty();
             }
 
             return Optional.of(rate.setScale(RATE_SCALE, RoundingMode.HALF_UP));
 
-        } catch (Exception e) {
+        } catch (RestClientException | JacksonException e) {
             log.warn("Failed to fetch rate from ExchangeRate-API: {}", e.getMessage());
             return Optional.empty();
         }
